--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
     <nav>
       <span>PORT TOWNSEND EATS</span>
-      <span class="order">Order This Week's Dinner: (310) 765-9098</span>
+      <span class="order">Order This Week's Dinner: (555) 555-1234</span>
     </nav>
 
 <!--Main banner-->
 
-    <div class="banner">
+    <section class="banner">
       <div class="banner text">
         <h1>Meal prep done right.</h1>
         <h2>Say goodbye to "What's for dinner tonight?" with 5-star meals home-cooked and ready for pick-up</h2>
       </div>
-    </div>
+    </section>
 
 <!--Services / How It Works (three icons + text)-->
 
-    <div class="services" id="services">
+    <section class="services" id="services">
       <div class="service">
         <img src="./resources/images/phone_icon.png" alt="">
         <h3>Reserve</h3>
@@ -45,41 +45,39 @@
         <h3>Enjoy</h3>
         <span>Purchase up to five dinners per week</span>
       </div>
-    </div>
+    </section>
 
 <!--Meal Banner-->
 
-    <div class="meal-banner">
+    <section class="meal-banner">
       <span>Garinn's meals have made it possible for me to finally get rid of my "What should we make for dinner" stress each night after work. The kids love the food, too - which all parents know is a major miracle! Thanks, Garinn!</span>
-    </div>
+    </section>
 
 <!--Testimonials-->
 
 <!--About-->
 
-    <div class="about" id="about">
+    <section class="about" id="about">
       <h2>Meet the Chef</h2>
       <div class="about chef">
         <img src="./resources/images/garinn.jpg" alt="">
         <span>Garinn Morton is a chef with an Over the Top approach to solving life's simple question, "What's for dinner?" With decades of experience in and around restaurants and kitchens, he's bringing his skills into your kitchen, and it's as easy as calling, reserving, and enjoying your home-cooked meal.</span>
       </div>
-    </div>
+    </section>
 
 <!--Footer-->
 
   <footer>
-    <div class="footer">
-      <span>Order This Week's Dinner: (310) 765-9098</span>
-      <ul>
-        <li><a href="#services">How It Works</a></li>
-        <li><a href="#about">Meet the Chef</a></li>
-        <li><a href="#">More Reviews</a></li>
-      </ul>
-    </div>
-
-    <span class="copyright">©2019 Website designed & developed by Alex Morton</span>
-
+    <span>Order This Week's Dinner: (555) 555-1234</span>
+    <ul>
+      <li><a href="#services">How It Works</a></li>
+      <li><a href="#about">Meet the Chef</a></li>
+      <li><a href="#">More Reviews</a></li>
+    </ul>
   </footer>
+
+  <span class="copyright">©2019-2020 Website designed & developed by Alex Morton</span>
+
 
   </body>
 </html>
