Minor style changes and text alignment

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
     <section class="meal-banner">
       <span>Garinn's meals have made it possible for me to finally get rid of my "What should we make for dinner" stress each night after work. The kids love the food, too - which all parents know is a major miracle! Thanks, Garinn!</span>
+
     </section>
 
 <!--Testimonials-->
@@ -76,7 +77,11 @@
     </ul>
   </footer>
 
-  <span class="copyright">©2019-2020 Website designed & developed by Alex Morton</span>
+<!--section at very bottom of the page-->
+
+  <section class="copyright">
+    <span>©2019-2020 Website designed & developed by <a href="http://alexlsalt.github.io" target="_blank">Alex Morton</a></span>
+  </section>
 
 
   </body>
